--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,24 +1,50 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Performance optimization project focused on reducing initial load time by streamlining client data fetching.",
+  "summary": "New project",
   "architectural_notes": [],
-  "known_issues": [],
-  "isFixRequest": false,
+  "known_issues": [
+    "First screen initial load takes more than 2–3 minutes (slow startup/loading)"
+  ],
+  "isFixRequest": true,
   "existing_features": [
     {
-      "id": "feature-update-the-react-query-data-layer-to-use-the-new-client-summary-api-as-the-default-dataset-for-initial-rendering-and-only-fetch-full-client-details-on-demand-when-a-user-navigates-to-an-individual-client-profile",
-      "title": "Update the React Query data layer to use the new client-summary API as the default dataset for initial rendering, and only fetch full client details on-demand when a user navigates to an individual client profile.",
+      "id": "feature-instrument-and-surface-initial-load-timings-so-we-can-identify-where-the-2-3-minute-delay-occurs-actor-creation-access-control-initialization-profile-fetch-summaries-fetch-add-a-lightweight-in-app-debug-log-console-optional-hidden-ui-panel-that-records-timestamps-and-durations-for-actor-creation-start-end-initializeaccesscontrolwithsecret-start-end-getcalleruserprofile-start-end-and-the-first-clientsummaries-fetch-start-end",
+      "title": "Instrument and surface initial-load timings so we can identify where the 2–3 minute delay occurs (actor creation, access-control initialization, profile fetch, summaries fetch). Add a lightweight in-app debug log (console + optional hidden UI panel) that records timestamps and durations for: actor creation start/end, `_initializeAccessControlWithSecret` start/end, `getCallerUserProfile` start/end, and the first `clientSummaries` fetch start/end.",
+      "reqIds": [
+        "REQ-1"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-prevent-redundant-query-refetch-storms-during-startup-by-adjusting-the-actor-change-invalidation-behavior-in-frontend-src-hooks-useactor-ts-ensure-that-when-the-actor-becomes-available-dependent-queries-are-not-immediately-force-refetched-multiple-times-instead-invalidate-once-and-let-mounted-queries-refetch-normally-or-refetch-only-the-minimal-set-required-for-the-current-route",
+      "title": "Prevent redundant query refetch storms during startup by adjusting the actor-change invalidation behavior in `frontend/src/hooks/useActor.ts`. Ensure that when the actor becomes available, dependent queries are not immediately force-refetched multiple times; instead, invalidate once and let mounted queries refetch normally (or refetch only the minimal set required for the current route).",
       "reqIds": [
         "REQ-2"
       ],
       "version": 1
     },
     {
-      "id": "feature-ensure-the-client-export-flow-remains-functional-with-the-streamlined-fetching-approach-including-exporting-based-on-the-currently-filtered-client-list",
-      "title": "Ensure the client export flow remains functional with the streamlined fetching approach, including exporting based on the currently filtered client list.",
+      "id": "feature-reduce-time-to-first-render-for-the-authenticated-app-by-updating-the-profile-gating-in-frontend-src-app-tsx-to-avoid-blocking-the-entire-app-ui-on-slow-profile-fetches-keep-the-app-responsive-by-rendering-the-shell-theme-layout-quickly-and-showing-a-clear-english-loading-state-in-the-main-content-area-while-profile-data-loads-with-a-retry-action-if-the-profile-request-fails",
+      "title": "Reduce time-to-first-render for the authenticated app by updating the profile gating in `frontend/src/App.tsx` to avoid blocking the entire app UI on slow profile fetches. Keep the app responsive by rendering the shell (theme + layout) quickly and showing a clear, English loading state in the main content area while profile data loads, with a retry action if the profile request fails.",
+      "reqIds": [
+        "REQ-3"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-add-a-backend-method-that-returns-the-minimal-data-needed-for-the-first-screen-in-a-single-canister-call-e-g-current-user-profile-client-summaries-for-the-dashboard-and-update-frontend-queries-to-use-this-single-call-on-initial-load-instead-of-multiple-round-trips",
+      "title": "Add a backend method that returns the minimal data needed for the first screen in a single canister call (e.g., current user profile + client summaries for the dashboard) and update frontend queries to use this single call on initial load instead of multiple round trips.",
       "reqIds": [
         "REQ-4"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-tune-react-query-caching-for-initial-load-queries-to-avoid-unnecessary-refetching-during-startup-specifically-set-appropriate-staletime-gctime-cache-time-for-the-current-user-profile-and-client-summaries-queries-so-they-do-not-refetch-repeatedly-during-the-first-minute-unless-identity-changes-or-an-explicit-mutation-invalidation-occurs",
+      "title": "Tune React Query caching for initial-load queries to avoid unnecessary refetching during startup. Specifically, set appropriate `staleTime`/`gcTime` (cache time) for the current-user profile and client summaries queries so they do not refetch repeatedly during the first minute unless identity changes or an explicit mutation invalidation occurs.",
+      "reqIds": [
+        "REQ-5"
       ],
       "version": 1
     }
@@ -26,28 +52,12 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Streamline how client data is fetched to reduce the initial wait (improve initial load performance).",
+      "summary": "Optimize app initial load time (first screen takes >2–3 minutes)",
       "reqIds": [],
-      "status": "pending"
-    },
-    {
-      "id": "AR-2",
-      "summary": "Add a lightweight client-summary API so the frontend can fetch only the minimal client fields needed for initial screens (Dashboard and Clients list) instead of fetching full ExtendedClient records (including progress and history) during app startup.",
-      "reqIds": [
-        "REQ-1"
-      ],
-      "status": "pending"
-    },
-    {
-      "id": "AR-4",
-      "summary": "Prevent unnecessary refetch work at startup by removing any broad 'refetch all queries' behavior tied to actor creation/identity changes, so client data is only fetched when the relevant pages/hooks are mounted.",
-      "reqIds": [
-        "REQ-3"
-      ],
       "status": "pending"
     }
   ],
-  "projectName": "Streamline client data fetching to further reduce initial wait",
+  "projectName": "Reduce initial screen load time (first screen takes 2–3 minutes)",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
