--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,50 +1,36 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "New project",
-  "architectural_notes": [],
+  "summary": "Project now includes stabilizing client onboarding UI loading to prevent backend actor-not-ready errors (\"Actor not available\").",
+  "architectural_notes": [
+    "During onboarding, frontend should gate calls on backend actor/canister readiness (e.g., retry/backoff or wait-for-ready) to prevent \"Actor not available\"."
+  ],
   "known_issues": [
-    "First screen initial load takes more than 2–3 minutes (slow startup/loading)"
+    "Onboarding can show \"Actor not available\" when frontend calls backend actor before deployment/upgrade is ready."
   ],
   "isFixRequest": true,
   "existing_features": [
     {
-      "id": "feature-instrument-and-surface-initial-load-timings-so-we-can-identify-where-the-2-3-minute-delay-occurs-actor-creation-access-control-initialization-profile-fetch-summaries-fetch-add-a-lightweight-in-app-debug-log-console-optional-hidden-ui-panel-that-records-timestamps-and-durations-for-actor-creation-start-end-initializeaccesscontrolwithsecret-start-end-getcalleruserprofile-start-end-and-the-first-clientsummaries-fetch-start-end",
-      "title": "Instrument and surface initial-load timings so we can identify where the 2–3 minute delay occurs (actor creation, access-control initialization, profile fetch, summaries fetch). Add a lightweight in-app debug log (console + optional hidden UI panel) that records timestamps and durations for: actor creation start/end, `_initializeAccessControlWithSecret` start/end, `getCallerUserProfile` start/end, and the first `clientSummaries` fetch start/end.",
+      "id": "feature-prevent-the-onboard-client-flow-from-submitting-any-backend-mutations-until-the-backend-actor-is-fully-ready-so-onboarding-never-surfaces-the-raw-error-text-actor-not-available-during-normal-loading-upgrade-windows",
+      "title": "Prevent the Onboard Client flow from submitting any backend mutations until the backend actor is fully ready, so onboarding never surfaces the raw error text \"Actor not available\" during normal loading/upgrade windows.",
       "reqIds": [
         "REQ-1"
       ],
       "version": 1
     },
     {
-      "id": "feature-prevent-redundant-query-refetch-storms-during-startup-by-adjusting-the-actor-change-invalidation-behavior-in-frontend-src-hooks-useactor-ts-ensure-that-when-the-actor-becomes-available-dependent-queries-are-not-immediately-force-refetched-multiple-times-instead-invalidate-once-and-let-mounted-queries-refetch-normally-or-refetch-only-the-minimal-set-required-for-the-current-route",
-      "title": "Prevent redundant query refetch storms during startup by adjusting the actor-change invalidation behavior in `frontend/src/hooks/useActor.ts`. Ensure that when the actor becomes available, dependent queries are not immediately force-refetched multiple times; instead, invalidate once and let mounted queries refetch normally (or refetch only the minimal set required for the current route).",
+      "id": "feature-update-the-onboarding-page-ui-to-handle-actor-readiness-explicitly-show-a-stable-non-flickering-loading-experience-and-avoid-transient-enable-disable-states-while-the-actor-is-being-created-invalidated",
+      "title": "Update the onboarding page UI to handle actor readiness explicitly: show a stable, non-flickering loading experience and avoid transient enable/disable states while the actor is being created/invalidated.",
       "reqIds": [
         "REQ-2"
       ],
       "version": 1
     },
     {
-      "id": "feature-reduce-time-to-first-render-for-the-authenticated-app-by-updating-the-profile-gating-in-frontend-src-app-tsx-to-avoid-blocking-the-entire-app-ui-on-slow-profile-fetches-keep-the-app-responsive-by-rendering-the-shell-theme-layout-quickly-and-showing-a-clear-english-loading-state-in-the-main-content-area-while-profile-data-loads-with-a-retry-action-if-the-profile-request-fails",
-      "title": "Reduce time-to-first-render for the authenticated app by updating the profile gating in `frontend/src/App.tsx` to avoid blocking the entire app UI on slow profile fetches. Keep the app responsive by rendering the shell (theme + layout) quickly and showing a clear, English loading state in the main content area while profile data loads, with a retry action if the profile request fails.",
+      "id": "feature-harden-error-normalization-so-that-if-an-actor-not-ready-error-still-occurs-edge-cases-the-user-facing-message-is-friendly-english-and-does-not-display-actor-not-available-verbatim",
+      "title": "Harden error normalization so that if an actor-not-ready error still occurs (edge cases), the user-facing message is friendly English and does not display \"Actor not available\" verbatim.",
       "reqIds": [
         "REQ-3"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-add-a-backend-method-that-returns-the-minimal-data-needed-for-the-first-screen-in-a-single-canister-call-e-g-current-user-profile-client-summaries-for-the-dashboard-and-update-frontend-queries-to-use-this-single-call-on-initial-load-instead-of-multiple-round-trips",
-      "title": "Add a backend method that returns the minimal data needed for the first screen in a single canister call (e.g., current user profile + client summaries for the dashboard) and update frontend queries to use this single call on initial load instead of multiple round trips.",
-      "reqIds": [
-        "REQ-4"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-tune-react-query-caching-for-initial-load-queries-to-avoid-unnecessary-refetching-during-startup-specifically-set-appropriate-staletime-gctime-cache-time-for-the-current-user-profile-and-client-summaries-queries-so-they-do-not-refetch-repeatedly-during-the-first-minute-unless-identity-changes-or-an-explicit-mutation-invalidation-occurs",
-      "title": "Tune React Query caching for initial-load queries to avoid unnecessary refetching during startup. Specifically, set appropriate `staleTime`/`gcTime` (cache time) for the current-user profile and client summaries queries so they do not refetch repeatedly during the first minute unless identity changes or an explicit mutation invalidation occurs.",
-      "reqIds": [
-        "REQ-5"
       ],
       "version": 1
     }
@@ -52,12 +38,12 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Optimize app initial load time (first screen takes >2–3 minutes)",
+      "summary": "Stabilize onboarding loading state so UI waits for backend actor/canister readiness and avoids \"Actor not available\" errors",
       "reqIds": [],
       "status": "pending"
     }
   ],
-  "projectName": "Reduce initial screen load time (first screen takes 2–3 minutes)",
+  "projectName": "Stabilize onboarding flow to prevent “Actor not available” errors",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
